# pentamino

./: .cvsignore  ChangeLog  Makefile.am  Makefile.in  README  config.cache  configure  configure.ac  default.cfg  penta.prj  penta.prj.13723  penta.spec  penta.spec.in  testrun.sh
_/: genshapes.py
doc/: Makefile.am  Makefile.in  makedocs
doc/sgml/: Penta.docbook  gui.docbook  style.xsl  usermanual.docbook
img/: .cvsignore  Makefile.am  Makefile.in
maps/: Makefile.am  Makefile.in  Rogalik.map  bird00.map  kaktus.map  stair00.map  test.map  what_is_this.map
src/: .cvsignore  .gitignore  File.cpp  File.h  GameField.cpp  GameField.h  I18n.cpp  I18n.h  Main.cpp  Main.h  Makefile.am  Makefile.in  SDLInterface.cpp  SDLInterface.h  Service.h  Shape.cpp  Shape.h  Shell.cpp  Shell.h  Sprite.cpp  Sprite.h  config.h  config.h.in  shapes.cpp
src/gui/: .cvsignore  GuiContainer.cpp  GuiContainer.h  GuiDrawContext.cpp  GuiDrawContext.h  GuiField.cpp  GuiField.h  GuiMenu.cpp  GuiMenu.h  GuiMenubar.cpp  GuiMenubar.h  GuiRootWindow.cpp  GuiRootWindow.h  GuiShapeSel.cpp  GuiShapeSel.h  GuiWidget.cpp  GuiWidget.h  Makefile.am  Makefile.in
