SUBDIRS = src doc img maps

configdir=$(datadir)/$(PACKAGE_NAME)-$(PACKAGE_VERSION)
config_DATA=default.cfg

EXTRA_DIST = penta.spec.in penta.spec $(config_DATA)

#
# $Log: Makefile.am,v $
# Revision 1.4  2005/05/26 17:43:24  kolen
# Added spec files for RPM building
#
# Revision 1.3  2005/05/20 15:57:20  kolen
# Added maps directory
#
# Revision 1.2  2005/05/20 13:06:08  kolen
# *** empty log message ***
#
#