noinst_LIBRARIES = libgui.a

libgui_a_SOURCES = \
	GuiWidget.cpp\
	GuiWidget.h\
	GuiDrawContext.h\
	GuiDrawContext.cpp\
	GuiRootWindow.cpp\
	GuiRootWindow.h\
	GuiContainer.cpp\
	GuiContainer.h\
	GuiShapeSel.cpp\
	GuiShapeSel.h\
	GuiField.cpp\
	GuiField.h\
	GuiMenubar.cpp\
	GuiMenubar.h\
	GuiMenu.cpp\
	GuiMenu.h
	
#
# $Log: Makefile.am,v $
# Revision 1.3  2005/05/20 11:28:27  kolen
# Directory search from autoconf.
# Fixed missing files in "make install"
# Added install
#
#
#	